fix: set overflow to hidden

--- a/apps/web/styles/index.scss
+++ b/apps/web/styles/index.scss
@@ -6,6 +6,7 @@
 body {
   margin: 0;
   font-family: JetBrains Mono, monospace;
+  overflow: hidden;
 }
 
 * {
